# bm25-rs

./: Cargo.toml  README.md  setup.py
bm25/: lib.rs
examples/: search_similar_context.py  speed_test.py  use_bm25.py
