[package]
name = "bm25"
version = "0.0.2"
authors = ["psyche"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bm25"
path = "bm25/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde_derive = "*"
serde_json = "*"
serde = "*"
tqdm-rs = "*"
counter = "*"
rayon = "*"


[dependencies.pyo3]
version = "0.17.0"
features = ["extension-module"]
